--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   
   <script src="semantic/dist/semantic.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <title>Hellomitr</title>
+    <title>Hellomitr - India's smartest & ideologist place for Mobiles, Fashion (Clothes/Shoes), Electronics, Home Appliances, Books, Home, Furniture, Grocery, Sporting goods etc</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
